Mon Jan 25 14:53:00 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * NEWS:
        
          Updated file with my changes since the last release.

Fri Jan 22 12:34:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
          Pass the ciao instance id through the constructor

Fri Jan 22 11:58:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          More tweaks for AMI4CCM

Fri Jan 22 10:14:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
          Generate another ami4ccm interface

Thu Jan 21 08:00:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/util/utl_global.cpp:
          Added support for #pragma ciao lem "X". When a lem is generated
          than any X seen will be generated into the new lem file

Thu Jan 21 01:50:30 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/Bug_3215_Regression/client.cpp:

          Added "include "tao/PI/PI.h" to the file to allow
          this test to pass on the iPhone Simulator. The
          inclusion of PI.h is rquired for static builds.

Thu Jan 21 01:45:41 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/Bug_3216_Regression/client.cpp:

          Added "include "tao/PI/PI.h" to the file to allow
          this test to pass on the iPhone Simulator. The
          inclusion of PI.h is rquired for static builds.

Wed Jan 20 19:19:19 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/ImplRepo_Service/Activator_Options.cpp: